fix: relative paths

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>QR Code Generator</title>
 
     <!-- Set Favicon image(used for TAB Logo)-->
-    <link rel="icon" type="image/png" href="/assets/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Link to external CSS file(Changes the way the HTML looks) -->
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -46,7 +46,11 @@
 
     <!-- display mode button -->
     <button id="dispmodeBtn">
-      <img id="dispmodeImage" src="/night-mode.png" alt="Toggle Display Mode" />
+      <img
+        id="dispmodeImage"
+        src="assets/night-mode.png"
+        alt="Toggle Display Mode"
+      />
     </button>
 
     <!-- Include the QR Code library -->
@@ -85,8 +89,8 @@
       const dispmodeImage = document.getElementById("dispmodeImage")
 
       // Define the two image sources
-      const darkModeIcon = "/assets/night-mode.png"
-      const lightModeIcon = "/assets/light-mode.png"
+      const darkModeIcon = "assets/night-mode.png"
+      const lightModeIcon = "assets/light-mode.png"
 
       // Add a click event listener to toggle the image
       dispmodeBtn.addEventListener("click", () => {
